--- a/WebContent/WEB-INF/config/jdbc.properties
+++ b/WebContent/WEB-INF/config/jdbc.properties
@@ -1,6 +1,6 @@
 #mysql\u914d\u7f6e
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://182.92.82.190:3306/cmsV8?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://182.92.82.190:3306/zixun?characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root!@#$
 
