--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/Users/xs/source/jar/thumbnailator-0.4.8.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/pic-thumbnailator"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
