修改手机端页面

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/t/cms/www/default/include/nav.html=UTF-8
+encoding//WebContent/r/cms/www/mobile/css/news.css=UTF-8
 encoding/<project>=UTF-8
